first commit of working Nim app which includes ollama-run commands without need for separate service or exported/imported .txt files

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ DeepSpeech-models/*.Identifier
 nim_mic_vad_streaming/libdeepspeech.so
 FIFO_rgb
 nim_mic_vad_streaming/vad_stream.exe
+libdeepspeech.so
