working with a couple of errors. but working

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,13 +10,33 @@
             "problemMatcher": [],
             "group": {
                 "kind": "build",
+                "isDefault": false
+            }
+        },
+        {
+            "label": "build llmBridge",
+            "type": "shell",
+            "command": "nim c -f -d:release --threads:on /home/nathan/Documents/RCA-IED/passive-verification-device/app/llmBridge.nim",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
                 "isDefault": true
             }
         },
         {
-            "label": "build websocket",
+            "label": "build websocket 1",
             "type": "shell",
-            "command": "nim c -f -d:release /home/nathan/Documents/RCA-IED/passive-verification-device/app/websocket.nim",
+            "command": "nim c -f -d:release /home/nathan/Documents/RCA-IED/passive-verification-device/app/websocket1.nim",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "build websocket 2",
+            "type": "shell",
+            "command": "nim c -f -d:release /home/nathan/Documents/RCA-IED/passive-verification-device/app/websocket2.nim",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
